- bios/screen.c: Fixed bug in Setscreen() - it must not use screenpt but it must
  set the new physical screen address immediatly. (THH)

2005-04-21
- bios/fnt_l9_*.c: Added the Latin-9 fonts. (THH)
- po/LINGUAS po/es.po bios/country.h country.mk: Now using the Latin-9 fonts
  for the Spanish translation. (THH)
- Fixed some linking errors when compiling with "-fno-common". (THH)

2005-04-25
- vdi/vdi_line.c: Changed draw_rect() a little bit (which is used for drawing
  filled polygons) so that the game "Ballerburg" now looks normal again. Well,
  I hope this change doesn't break anything else... (THH)

2005-04-26
- vdi_asm.S/vdi_mouse.c: Support for mouse wheel (vex_wheelv) via Eiffel
  style IKBD status packets. (JKL)

2005-04-27
- bios/fnt_l9_*.c: Fixed a problem with the Spanish fonts - added some missing
  characters. (THH)
- aes/geminit.c: The "#Z" line in EMUDESK.INF now also works if it is not the
  last line in that file. (THH)
- bios/screen.c: Added gap between screen ram and phys_top. (THH)

2005-04-28
- aes/gemwmlib.c: Default owner of the desktop window is now the current
  application, not the screen manager. This fixes the problem that some
  programs did not receive mouse button events. (THH)
- bios/linea.S vdi/vdi_mouse.c: Enabled the Line-A functions dis_cur & hide_cur
  again (they still seem to work fine and are needed for GFA Basic). (THH)

2005-04-29
- po/gr.po: Added George Nakos' update for the Greek translation. (THH)

2005-05-01
- aes/gemsuper.* aes/gemdosif.S: Slightly improved the super() function (the
  AES trap entry point function). (THH)
- aes/gemrslib.c: Menu dividers now look normal again. (THH)

2005-05-02
- bios/screen.c: Added screen switching support to the Setscreen() XBIOS
  function (for ST screen modes only at the moment). (THH)

2005-05-09
- bios/linea.S: Line-A #9 must be v_show_c() and not dis_cur(). (THH)
- vdi/vdi_mouse.c: Mouse must not be displayed again if it is already visible.